--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,7 +5,6 @@
 }
 
 body {
-  background: black;
   width: 100%;
   height: 100%;
 }
@@ -17,6 +16,7 @@ body {
   flex-direction: column;
   background: white;
   margin: auto;
+  border: 1px solid red;
 }
 
 .tag {
@@ -32,6 +32,15 @@ body {
   margin: 70px auto;
   display: flex;
 }
+header img:first-child {
+  height: 88px;
+  width: 497px;
+}
+
+header img:nth-child(2) {
+  width: 363px;
+  height: 42px;
+}
 
 header {
   background: black;
@@ -39,8 +48,8 @@ header {
   justify-content: space-between;
   padding: 20px 30px 20px 60px;
   margin-top: -5px;
+  align-items: center;
 }
-
 .tag h1 {
   margin: 0px 60px;
 }
