--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -47,7 +47,7 @@ header {
   display: flex;
   justify-content: space-between;
   padding: 20px 30px 20px 60px;
-  margin-top: -5px;
+  margin-top: -50px;
   align-items: center;
 }
 .tag h1 {
@@ -67,4 +67,41 @@ header {
   justify-content: space-around;
   margin: auto;
   padding: 40px 120px;
+}
+
+/* 606 */
+
+.footer button {
+  width: 300px;
+  height: 50px;
+  border-radius: 0px;
+  background: red;
+  border: none;
+  color: white;
+  font-size: 30px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin: 50px auto 0px auto;
+}
+
+#page606 span.details {
+  padding: 0px;
+  justify-content: space-between;
+}
+
+#page606 span.details img {
+  margin: 10px;
+}
+
+#page606 span.details img:first-child {
+  margin: 0px 50px 0px 50px;
+  width: 550px;
+}
+
+#page606 .levels img {
+  float: right;
 }
